--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=5000
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://database-negativacao.c8m8cnqok55n.us-west-2.rds.amazonaws.com:3306/negativacao
+spring.datasource.username=admin
+spring.datasource.password=giovanna
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
